--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <botimoz-widget></botimoz-widget>
+    <botimoz-widget license="YTI3NjlkMzMtNDNlYy00ZWEwLWFiYTQtMTI5NjIxNDEyMjc0O2M4ZDA1YjVmLWQzZjAtNGVmMy05YTgwLThmODA1OGRjMWUzZDs="></botimoz-widget>
   </body>
 </html>
