bubbles change + context added

--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- <script src="./dist/botimoz.es.js"></script> -->
   </head>
-  <body>
+  <body class="bg-gray-700">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <botimoz-widget license="YTI3NjlkMzMtNDNlYy00ZWEwLWFiYTQtMTI5NjIxNDEyMjc0O2M4ZDA1YjVmLWQzZjAtNGVmMy05YTgwLThmODA1OGRjMWUzZDs="
-    bot_greeting="Hello! How can I help you today?"></botimoz-widget>
+    bot_greeting="Hello! How can I help you today?"
+    user_avatar="https://keenwi.openhit.com/images/optalk/userAvatar.png"
+    bot_avatar="https://keenwi.openhit.com/images/optalk/optalk-icon-white-logo.png"
+    bot_name="Oppie"
+    show_powered_by="true"
+    chat_bg_color="white"
+    class="absolute bottom-0 right-0">
+  </botimoz-widget>
   </body>
 </html>
