fixed bot avatar width

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-     <script src="widget_loader.js" defer></script>
+     <!-- <script src="widget_loader.js" defer></script> -->
   </head>
   <body class="bg-gray-700">
     <div id="root"></div>
-    <!-- <script type="module" src="/src/main.jsx"></script> -->
-    <!-- <botimoz-widget license="YTI3NjlkMzMtNDNlYy00ZWEwLWFiYTQtMTI5NjIxNDEyMjc0O2M4ZDA1YjVmLWQzZjAtNGVmMy05YTgwLThmODA1OGRjMWUzZDs="
+    <script type="module" src="/src/main.jsx"></script>
+    <botimoz-widget license="YTI3NjlkMzMtNDNlYy00ZWEwLWFiYTQtMTI5NjIxNDEyMjc0O2M4ZDA1YjVmLWQzZjAtNGVmMy05YTgwLThmODA1OGRjMWUzZDs="
     bot_greeting="Hello! How can I help you today?"
     user_avatar="https://keenwi.openhit.com/images/optalk/userAvatar.png"
     bot_avatar="https://keenwi.openhit.com/images/optalk/optalk-icon-white-logo.png"
     bot_name="Oppie"
     show_powered_by="true"
     chat_bg_color="white"
-    class="absolute bottom-0 right-0"> -->
+    class="absolute bottom-0 right-0">
   </botimoz-widget>
   </body>
 </html>
